--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Muhammad Zamroni",
-            "email": "halo@matriphe.com"
+            "name": "apnem19",
+            "email": "apnem19@vk.com"
         }
     ],
     "autoload": {
